--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+<!-- update -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Inscription – Agence Matrimoniale Noir & Blanc</title>
@@ -140,3 +141,4 @@ setLang('fr');
 
 </body>
 </html>
+
